--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "owl.carousel": "^2.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-owl-carousel": "^2.3.3"
   },
   "devDependencies": {
